<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuView"

    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/ic_launcher_connect4_round"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/play_button"
        android:layout_below="@id/textView"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="16dp"
        android:paddingRight="40dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_turn"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/first_turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/first_turn_you"
            android:orientation="horizontal"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/first_turn_you"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radio_btn_selector_left_corner"
                android:text="@string/first_turn_you" />

            <RadioButton
                android:id="@+id/first_turn_friend"
                style="@style/RadioButtonStyle"
                android:background="@drawable/radio_btn_selector_right_corner"
                android:text="@string/first_turn_friend" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choose_your_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/red"
            android:orientation="horizontal"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/red"
                style="@style/RadioButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:background="@drawable/radio_button_selector_red"
                android:button="@null" />


            <RadioButton
                android:id="@+id/yellow"
                style="@style/RadioButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:background="@drawable/radio_button_selector_yellow"
                android:button="@null" />
        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/radio_button_pressed"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/play_button" />

</RelativeLayout>